Make tpmCutoff optional